v8/tests/messages/unknown-continue-label.out
unknown-continue-label.js:2: Uncaught SyntaxError: Undefined label 'knark'
  continue knark;
           ^
